# recruitment-test-data-engineering

./: Readme.md  docker-compose.yml  model.py  schema.sql
data/: example_python.json  output.json  people.csv  people_unknown_place.csv  summary_output.json
images/example-c/: Dockerfile
images/example-node/: Dockerfile  package.json
images/example-python/: Dockerfile  requirements.txt
images/example-r/: Dockerfile  example.R
images/example-ruby/: Dockerfile  Gemfile  example.rb
images/example-rust/: Cargo.toml  Dockerfile
images/example-rust/src/: main.rs
images/example-swift/: Dockerfile  Package.swift
images/example-swift/Sources/example/: main.swift
images/load_data/: Dockerfile  read_data.py  requirements.txt
images/output/: Dockerfile  requirements.txt  summary.py
images/process/: Dockerfile  process.rb
images/pythonsql/: Dockerfile  pythonsql.py
images/robward/: Dockerfile  dataload.py  example.py  requirements.txt  test_dataload.py
