[package]
name = "example-rust"
version = "0.1.0"
authors = ["Justine <jmzquiapos@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.1.0"
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
